syntax = "proto3";

option java_package = "com.mk.remoteship.port.primary.grpc";
option java_multiple_files = true;
option java_generic_services=true;

enum BookType {
    BOOK = 0;
    NEWS_PAPER = 1;
    COMIC_BOOK = 2;
}
message CreateBook {
    string ISBN = 1;
    string title = 2;
    string author = 3;
    int32 page = 4;
    repeated string keyword = 5;
    BookType bookType = 6;
}

message ResponseBook {
    string id = 1;
}

message Book {
    string id = 1;
    string ISBN = 2;
    string title = 3;
    string author = 4;
    int32 page = 5;
    repeated string keyword = 6;
    BookType bookType = 7;
}

message FindBook {
    string id = 1;
}

service BookService {
    rpc createBooks(CreateBook) returns (ResponseBook);
    rpc getBooks(FindBook) returns (Book);
}